# Formal-Languages-Compiler-Design

./: .gitignore  README.md
1/: p1.oli  p1err.oli  p2.oli  p3.oli
2/: Lexic.txt  Syntax.in  token.in
3/olive-compiler/: Cargo.toml
3/olive-compiler/src/: lib.rs  main.rs  models.rs  tests.rs
4/olive-compiler/: Cargo.toml
4/olive-compiler/output/p1/: tokens.out
4/olive-compiler/output/p1err/: tokens.out
4/olive-compiler/output/p2/: tokens.out
4/olive-compiler/output/p3/: tokens.out
4/olive-compiler/src/: main.rs  models.rs
4/olive-compiler/src/models/: hash_map.rs  pair.rs  table.rs
4/olive-compiler/src/utils/: scanner.rs  token.rs
5/olive-compiler/: Cargo.toml
5/olive-compiler/doc/: dfa.txt
5/olive-compiler/input/: char.dfa  identifier.dfa  number.dfa  string.dfa
5/olive-compiler/src/: lib.rs  main.rs  utils.rs  view.rs
compiler/: README.md
compiler/automata/: Cargo.toml
compiler/bison/: .gitignore  olive.l  olive.y
compiler/flex/: .gitignore  olive.l
compiler/flex/output/: p1.out  (+3 more)
compiler/hash-map/: Cargo.toml
compiler/olive/: Cargo.toml
compiler/parser/: Cargo.toml  README.md
compiler/scanner/: Cargo.toml  README.md
compiler/scanner/output/p1/: tokens.out
compiler/scanner/output/p2/: tokens.out
compiler/scanner/output/p3/: tokens.out
compiler/scanner/src/: lib.rs  main.rs  models.rs
compiler/scanner/src/models/: automata.rs  scanner.rs  token.rs
compiler/scanner/src/utils/: constants.rs  scanner.rs  token.rs  writer.rs
programs/: p1.oli  p1err.oli  p2.oli  p3.oli
specification/: Lexic.txt  Syntax.in  token.in
(+55 files in other folders)
