[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash_map = {path = "../hash-map", package = "hash-map"}
automata = {path = "../automata", package = "automata"}
lazy_static = "1.4.0"
regex = "1.10.1"
